# strata-node

./: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  stratadb.d.ts
.github/workflows/: release.yml
__tests__/: strata.test.js
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
